//
//  GarmentsUITests.swift
//  GarmentsUITests
//
//  Created by Sanith on 5/26/20.
//  Copyright © 2020 Sanith. All rights reserved.
//

import XCTest

class GarmentsUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testAddGarment() throws {
        // UI tests must launch the application that they test.
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        app.launch()
        
        let tablesQuery = app.tables
        XCTAssertTrue(tablesQuery.buttons["Creation Time"].exists)
        tablesQuery.buttons["Creation Time"].tap()
        XCTAssertTrue(tablesQuery.buttons["Alpha"].exists)
        tablesQuery.buttons["Alpha"].tap()
        
        if app.navigationBars["List"].buttons["Item"].exists {
            app.navigationBars["List"].buttons["Item"].tap()
            let textField = app.textFields["Enter Garment Name"]
            if textField.exists {
                textField.tap()
                textField.typeText("Pant")
                if app.navigationBars["Add"].buttons["Save"].exists {
                    app.navigationBars["Add"].buttons["Save"].tap()
                }else {
                    print("Button does not exists")
                }
                
            }
        }else {
            print("Button does not exists")
        }
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
